--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <h1>Nickname Generator</h1>
     <p>Enter your first and last name below. Then select a button to generate a random nickname or see all nicknames.</p>
     <p>First Name <input type="text" id="firstName"> Last Name <input type="text" id="lastName"></p>
+    <button id="random">Random Nickname</button> <button id="all">All Nicknames</button>
     <hr>
+    <h1 id="nickname"></h1>
 
 
     <script src="script.js"></script>
